# hush_v2

./: .gitattributes  .gitignore  BREVO_INBOUND_ISSUE.md  CHROME_EXTENSION_README.md  CHROME_EXTENSION_SETUP.md  DEPLOYMENT_OPTIONS.md  EMAIL_FORWARDING_DEBUG.md  EMAIL_FORWARDING_REPORT.md  EMAIL_FORWARDING_SUMMARY.md  NGROK_QUICK_START.md  NGROK_SETUP.md  PROJECT_REPORT.md  PROJECT_ROADMAP.md  RAILWAY_DEPLOY.md  RAILWAY_ENV_CHECKLIST.md  RAILWAY_ENV_VARIABLES.md  RAILWAY_QUICK_FIX.md  README.md  REMAINING_TASKS.md  WEBHOOK_SETUP_GUIDE.md  WEBHOOK_TROUBLESHOOTING.md  WHY_NOT_WORKING_TODAY.md  build.crx  build.pem  index.html  manifest.json  options.html  package-lock.json  package.json  popup.html  railway.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
icons/: README.md
scripts/: copy-extension-files.js
server/: API_EXAMPLES.md  BOUNCE_HANDLING.md  BREVO_ATTACHMENTS_TESTS.md  BUILD_TROUBLESHOOTING.md  BUILD_WINDOWS_FIX.md  CHECKLIST.md  CONFIGURATION_COMPLETE.md  CURRENT_STATUS.md  Cargo.toml  Dockerfile  EMAIL_FORWARDING_SETUP.md  ENV_SETUP.md  FINAL_SETUP.md  GET_TOKEN.ps1  NEON_SETUP.md  NEXT_STEPS.md  QUICK_FIX.md  QUICK_START.md  QUICK_START_FORWARDING.md  QUICK_TEST.ps1  README.md  SETUP_INSTRUCTIONS.md  SUPABASE_KEYS.md  SUPABASE_SETUP.md  TESTING_GUIDE.md  TEST_EMAIL_DIRECT.ps1  TEST_EMAIL_FORWARDING.ps1  TEST_EMAIL_FORWARDING_FORM.ps1  TEST_SMTP.ps1  nixpacks.toml  nixpacks.yml  railway.toml  sqlx-data.json
server/migrations/: 001_initial_schema.sql
server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  rate_limit.rs  services.rs  webhook_security.rs
server/src/api/: aliases.rs  auth.rs  incoming.rs  mod.rs  notifications.rs  targets.rs
server/src/middleware/: hsts.rs  mod.rs
server/src/models/: attachment.rs
server/src/services/: alias_service.rs  email_service.rs  target_service.rs
server/src/services/email_service/: mailgun.rs
src/: App.tsx  background.ts  content.ts  design-system.tsx  global.d.ts  index.css  landing.tsx  main.tsx  options.tsx  popup.tsx  vite-env.d.ts
src/components/: BrandKit.tsx  IconSizes.tsx  InlineButtonShowcase.tsx  OptionsDesign.tsx  PopupDesign.tsx  RiskTooltipShowcase.tsx
src/components/landing/: CTASection.tsx  DemoSection.tsx  FAQSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingPage.tsx  Navigation.tsx  ScrollToTop.tsx  SecuritySection.tsx  (+1 more)
src/contexts/: AuthContext.tsx
src/lib/: api.ts
src/pages/: AliasLogsPage.tsx  Dashboard.tsx  LoginPage.tsx  RegisterPage.tsx  StatisticsPage.tsx  TargetEmailPage.tsx
(+1 files in other folders)
