[package]
name = "hush-v2-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.15"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
ipnet = "2.9"
url = "2.5"

# Configuration
config = "0.14"
dotenv = "0.15"

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
base64 = "0.21"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
governor = "0.10"
tower_governor = "0.8"

# TLS/SSL support
rustls = "0.23"
tokio-rustls = "0.25"
rcgen = "0.13"
rustls-pemfile = "2.0"
futures = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

